# fedora-update-feedback

./: .gitignore  CHANGELOG.md  Cargo.toml  NEWS.md  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
etc/: fedora-update-feedback.bash
src/: checks.rs  cli.rs  config.rs  ignore.rs  input.rs  lib.rs  main.rs  nvr.rs  output.rs  parse.rs  query.rs  secrets.rs  sysinfo.rs
