[package]
name = "fedora-update-feedback"
description = "Provide feedback for Fedora updates (inspired by fedora-easy-karma)"
license = "MIT OR Apache-2.0"

version = "2.1.3"
edition = "2021"
rust-version = "1.70.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/.github/", "/deny.toml", "/rustfmt.toml"]
categories = ["command-line-utilities"]
keywords = ["fedora", "bodhi", "updates", "feedback"]
repository = "https://github.com/ironthree/fedora-update-feedback"

[dependencies]
bodhi = "2.0.1"
chrono = { version = "0.4.19", features = ["clock", "std"], default-features = false }
clap = { version = "4", features = ["derive", "color", "suggestions", "wrap_help"]}
dirs = "5"
env_logger = "0.10"
log = "0.4.14"
rpassword = "7"
secret-service = { version = "3", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
term_size = "0.3.2"
textwrap = "0.16"
tokio = { version = "1.14", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.8"

[build-dependencies]
clap = { version = "4", features = ["derive"]}
clap_complete = "4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

